--- a/coffee.css
+++ b/coffee.css
@@ -35,7 +35,7 @@ body{
 /*header*/
 header{
 	height: 100vh;
-	background: linear-gradient(rgba(0,0,0,0.63), rgba(0,0,0,0.5)), url(images/b.jpg)no-repeat center center/cover;
+	background: linear-gradient(rgba(0,0,0,0.63), rgba(0,0,0,0.5)), url(b.jpg)no-repeat center center/cover;
 }
 .banner{
 	position: absolute;
